<resources>
    <string name="app_name">Project-Unsplash</string>
    <string name="image_view_content_desc">Image</string>
    <string name="search_button_content_desc">Search button</string>
    <string name="collection_recycler_view_item">Collection Recycler view item</string>
    <string name="et_search_hint">Search</string>
    <string name="collections_label">Collections</string>
    <string name="featured_label">Featured</string>
    <string name="nav_featured_label">Featured</string>
    <string name="nav_search_label">Search</string>
    <string name="nav_favorites_label">Favorites</string>
    <string name="nav_profile_label">Profile</string>
    <string name="photo_intent_transfer_key">PHOTO</string>
    <string name="set_wallpaper_btn_label">APPLY</string>
    <string name="collection_view_photos_label">Photos</string>
    <string name="collection_parcelable_intent_extra">COLLECTION</string>
    <string name="collection_title_replacement">Collection</string>
    <string name="view_more_btn_label">View More</string>
    <string name="featured_collections_title">Featured Collections</string>
    <string name="add_to_favorites_btn_label">Add to Favorites</string>
    <string name="favorites_fragment_title">Favorites</string>
    <string name="database_photo_id_col_name">_id</string>
    <string name="collections_nav_bar_label">Collections</string>
    <string name="featured_nav_item_label">Featured</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="order_by_latest">latest</string>
    <string name="order_by_oldest">oldest</string>
    <string name="order_by_popular">popular</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_sort_label">Sort</string>
    <string name="dialog_cancel_btn_label">CANCEL</string>
    <string name="nav_item_new_label">New</string>
    <string name="order_by_param_transaction_key">ORDER_BY</string>
    <string name="access_token_shared_preferences">ACCESS_TOKEN_PREFERENCES</string>
    <string name="access_token_storage_key">ACCESS_TOKEN</string>
    <string name="download_action_btn_label">Download</string>
    <string name="to_collections_action_btn_label">to Collections</string>
    <string name="user_intent_pass_key">USER</string>
    <string name="nav_wallpaper_label">Wallpapers</string>
    <string name="category_intent_pass_key">CATEGORY</string>
    <string name="categories_list_activity_title">Categories</string>
    <string name="settings_nav_drawer_item_label">Settings</string>
    <string name="rate_nav_drawer_label">Rate</string>
    <string name="categories_nav_drawer_label">Categories</string>
    <string name="profile_intent_pass_key">PROFILE</string>
    <string name="feedback_nav_drawer_item_label">About</string>
</resources>
