<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_fragments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new"
            android:icon="@mipmap/ic_explore"
            android:title="@string/nav_item_new_label" />
        <item
            android:id="@+id/nav_featured"
            android:icon="@mipmap/ic_favorites"
            android:title="@string/nav_featured_label" />
        <item
            android:id="@+id/nav_collections"
            android:icon="@mipmap/ic_collections"
            android:title="@string/collections_nav_bar_label" />
    </group>

    <group
        android:id="@+id/nav_group_categories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@mipmap/ic_explore"
            android:title="Categories" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
