<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="14dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <EditText
                    android:id="@+id/et_search_text"
                    android:hint="@string/et_search_hint"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="56dp" />

                <ImageButton
                    android:id="@+id/search_btn"
                    android:background="@drawable/search_bold"
                    android:contentDescription="@string/search_button_content_desc"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_width="32dp"
                    android:layout_height="32dp" />

            </LinearLayout>

            <TextView
                android:text="@string/collections_label"
                style="@style/subTitleStyle"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                app:cardCornerRadius="10dp"
                android:elevation="0dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="228dp">

                <android.support.design.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/main_collection_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/collection_recycler_view_item"
                        android:scaleType="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/main_collection_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/md_white_1000"
                        android:textSize="18sp"
                        android:layout_margin="14dp"
                        app:layout_anchor="@+id/main_collection_img"
                        app:layout_anchorGravity="end|bottom" />

                </android.support.design.widget.CoordinatorLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/collectionsRecyclerView"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/viewMoreBtn"
                android:background="@color/md_grey_200"
                android:text="@string/view_more_btn_label"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>